k8s/k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dockerpublish-kubernetes-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: kubernetes.magnusminds.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dockerpublish-kubernetes-service
            port:
              number: 7070
